Add buttons styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,8 @@
 /* 7. BASE*/
 
 /* 7. COMPONENTS*/
+@import
+  'components/buttons';
 
 /* 7. LAYOUT*/
 
@@ -14,5 +16,5 @@
 
 /* 7. VENDORS*/
 @import
-'vendors/normalize';
+  'vendors/normalize';
 
