Fix spacings from block groups

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
 /* 1. ABSTRACTS*/
+@import
+  'abstracts/mixins';
+
 
 /* 7. BASE*/
 
@@ -9,6 +12,8 @@
   'components/buttons';
 
 /* 7. LAYOUT*/
+@import
+  'layout/wp-block-group';
 
 /* 7. PAGES*/
 
@@ -17,4 +22,3 @@
 /* 7. VENDORS*/
 @import
   'vendors/normalize';
-
