Fix header feature

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,17 +2,24 @@
 
 /* 1. ABSTRACTS*/
 @import
-  'abstracts/mixins';
+  'abstracts/mixins',
+  'abstracts/variables';
 
 
 /* 7. BASE*/
+@import
+  'base/base';
+
 
 /* 7. COMPONENTS*/
 @import
-  'components/buttons';
+'components/buttons',
+'components/hamburgermenu',
+'components/modal';
 
 /* 7. LAYOUT*/
 @import
+  'layout/header',
   'layout/wp-block-group';
 
 /* 7. PAGES*/
