Fix hover effect of navigation items and site title

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,8 @@
 @import
 'components/buttons',
 'components/hamburgermenu',
-'components/modal';
+'components/modal',
+'components/navigation';
 
 /* 7. LAYOUT*/
 @import
