Add ninja form styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,7 +16,8 @@
 'components/buttons',
 'components/hamburgermenu',
 'components/modal',
-'components/navigation';
+'components/navigation',
+'components/ninjaform';
 
 /* 7. LAYOUT*/
 @import
