--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,4 +4,5 @@ header {
   background-color: $color--base;
   padding: calc(.2 * var(--wp--style--root--padding-top)) 0;
   box-shadow: 0 2px 3px -2px rgba(black, .10);
+  z-index: 1000;
 }
