--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,9 @@
 footer {
+  padding-top: var(--wp--preset--spacing--50);
+
   .wp-block-group {
     div {
       border-top: 1px solid #acabab;
-
     }
   }
 }
