--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -60,3 +60,8 @@ $font-size--x-large: clamp(1.5625em, 1.563rem + ((1vw - 0.48em) * 0.84), 2em);
 $font-size--xx-large: clamp(2em, 2rem + ((1vw - 0.48em) * 0.962), 2.5em);
 $font-size--huge: clamp(2.5em, 2.5rem + ((1vw - 0.48em) * 0.962), 3em);
 $font-size--gigantic: clamp(3em, 3rem + ((1vw - 0.48em) * 1.923), 4em);
+
+
+/* Layouts */
+
+$medium-size: 1000px;
