--- a/src/scss/pages/_single-event.scss
+++ b/src/scss/pages/_single-event.scss
@@ -42,6 +42,10 @@
       gap: 1em;
       flex-direction: row;
     }
+
+    p {
+      margin: 0;
+    }
   }
 
   &__date,
@@ -59,6 +63,22 @@
     margin-top: 3em !important;
     padding-top: 1em;
     border-top: 2px dotted lightgray;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  &__location {
+
+    &-title {
+      font-weight: 500;
+    }
+
+    p {
+      margin: 0;
+    }
+
   }
 }
 
