Add event detail page styles

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -34,6 +34,9 @@ $color--nonary: #ffc40c;
 $color--decimary: #71BBFA;
 $color--undecimary: #FF7761;
 $color--duodecimary: #acace6;
+$color--grey: #4F4F4E;
+$color--grey-light: #dbdada;
+
 
 /**
  * Global font sizes
