Fix link focus color on title of event item

--- a/src/scss/components/_event-item.scss
+++ b/src/scss/components/_event-item.scss
@@ -19,6 +19,12 @@
         left: 0;
         z-index: 2;
       }
+
+      &:focus,
+      &:active,
+      &:hover {
+        color: inherit;
+      }
     }
 
     @include respond(mobile) {
