Fix events grid spacing + Fix event body link color

--- a/src/scss/components/_events.scss
+++ b/src/scss/components/_events.scss
@@ -1,9 +1,8 @@
 .events {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: center;
   justify-content: space-between;
-  gap: 2.2vmax;
+  gap: 2em;
   list-style: none;
   padding-left: 0;
 }
